--- a/src/web/views/index.pug
+++ b/src/web/views/index.pug
@@ -1,15 +1,12 @@
 extends layout
 
 block head
-    title Tobari
+    title = web.main.index.title
 
 block content
     .p-5.mb-4.bg-body-tertiary.rounded-5
         .container-fluid.py-5
-            h1.display-5.fw-bold 반가워요! 👋
-            p.col-md-8.fs-6.text-muted
-              | 한번 생각해 봅시다. 우리들은 현실의 서스펜스에 갇혀 지내며, 수도 없는 잠재적 위협들을 시시각각으로 맞닥뜨리고 있습니다. 또, 주변을 둘러싼 날카로운 모서리들과 정격의 구조물들은
-              | 우리의 마음을 더 지치게 만듭니다. 어떤가요, 딱딱한 콘크리트와 알루미늄, 그리고 플라스틱은 이제 조금 지겹지 않나요? 연약한 이너차일드를 위해서 휴식이 필요할지도
-              | 모르겠습니다. 멋대로 흘러가는 당신의 구름을 담아줄 작은 그릇, 여기는 마인크래프트입니다.
-            button.btn.btn-primary.rounded-pill(type="button", onclick="location.href = '/control'") 놀러가기 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/></svg>
-            button.btn.btn-outline-secondary.rounded-pill.mx-1(type="button", onclick="location.href = '/about'") 더 알아보기 <svg class="ms-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/><path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/></svg>
+            h1.display-5.fw-bold #{web.main.index.jumbotron.display}
+            p.col-md-8.fs-6.text-muted #{web.main.index.jumbotron.content}
+            button.btn.btn-primary.rounded-pill(type="button", onclick="location.href = '/control'") #{web.main.index.jumbotron.to_control} <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/></svg>
+            button.btn.btn-outline-secondary.rounded-pill.mx-1(type="button", onclick="location.href = '/about'") #{web.main.index.jumbotron.to_about} <svg class="ms-1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/><path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/></svg>
