--- a/src/web/views/layout.pug
+++ b/src/web/views/layout.pug
@@ -27,7 +27,7 @@ html(lang="kr")
         .container.border-bottom.py-1
             nav.navbar.navbar-expand-lg.bg-body-primary
                 .container-fluid
-                    a.navbar-brand(href="/") chabyik's minecraft
+                    a.navbar-brand(href="/") #{web.navigation.brand}
                     button.navbar-toggler(
                         type="button",
                         data-bs-toggle="collapse",
@@ -40,20 +40,20 @@ html(lang="kr")
                     .collapse.navbar-collapse#navbarNav
                         ul.navbar-nav
                             li.nav-item
-                                a.nav-link(href="/") Home
+                                a.nav-link(href="/") #{web.navigation.home}
                             li.nav-item
-                                a.nav-link(href="/about") About
+                                a.nav-link(href="/about") #{web.navigation.about}
                             li.nav-item
-                                a.nav-link(href="/control") Control
+                                a.nav-link(href="/control") #{web.navigation.control}
                         ul.navbar-nav.ms-auto
                             li.nav-item
-                                button.btn.btn-outline-success(type="button", onclick="location.href = '/login'") Login
+                                button.btn.btn-outline-success(type="button", onclick="location.href = '/login'") #{web.navigation.login}
         main.flex-grow-1.mt-3
             .container
                 block content
         footer.footer.mt-auto.text-center
             .container.py-3
-                p.text-black-50 Copyright 2025. chabyik all rights reserved.
+                p.text-black-50 #{web.footer.copyright}
             
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js", integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q", crossorigin="anonymous")
         script.
