--- a/src/web/views/index.pug
+++ b/src/web/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block head
-    title = web.main.index.title
+    title #{web.main.index.title}
 
 block content
     .p-5.mb-4.bg-body-tertiary.rounded-5
